Bug 64935 - [swrast] s_texfetch.c:1335: set_fetch_functions: Assertion `texImage->FetchTexel' failed.
Summary: [swrast] s_texfetch.c:1335: set_fetch_functions: Assertion `texImage->FetchTe...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: have-backtrace, regression
Depends on:
Blocks:
 
Reported: 2013-05-24 02:51 UTC by Vinson Lee
Modified: 2013-06-11 14:28 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2013-05-24 02:51:48 UTC
mesa: b1797c3a3867ab60419bb9ec13dd9cb842edcbe3 (master)

Run piglit texture-packed-formats on swrast.

$ ./bin/texture-packed-formats -auto
Mesa warning: failed to remap glClampColorARB
Mesa warning: failed to remap glTexBufferARB
Mesa warning: failed to remap glFramebufferTextureARB
Mesa warning: failed to remap glVertexAttribDivisorARB
Mesa warning: failed to remap glProgramParameteriARB
texture-packed-formats: ../../../src/mesa/swrast/s_texfetch.c:1335: set_fetch_functions: Assertion `texImage->FetchTexel' failed.
Aborted (core dumped)

(gdb) bt
#0  0x00007fd37a518425 in __GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#1  0x00007fd37a51bb8b in __GI_abort () at abort.c:91
#2  0x00007fd37a5110ee in __assert_fail_base (fmt=<optimized out>, assertion=0x7fd3770b82f5 "texImage->FetchTexel", 
    file=0x7fd3770b8220 "../../../src/mesa/swrast/s_texfetch.c", line=<optimized out>, function=<optimized out>) at assert.c:94
#3  0x00007fd37a511192 in __GI___assert_fail (assertion=0x7fd3770b82f5 "texImage->FetchTexel", 
    file=0x7fd3770b8220 "../../../src/mesa/swrast/s_texfetch.c", line=1335, function=0x7fd3770b8310 "set_fetch_functions")
    at assert.c:103
#4  0x00007fd376f6b347 in set_fetch_functions (samp=0x1fbcd84, texImage=0x21a4f50, dims=2)
    at ../../../src/mesa/swrast/s_texfetch.c:1335
#5  0x00007fd376f6b41b in _mesa_update_fetch_functions (ctx=0x1fa3ed0, unit=0) at ../../../src/mesa/swrast/s_texfetch.c:1356
#6  0x00007fd376f442a8 in _swrast_update_texture_samplers (ctx=0x1fa3ed0) at ../../../src/mesa/swrast/s_context.c:481
#7  0x00007fd376f44553 in _swrast_validate_derived (ctx=0x1fa3ed0) at ../../../src/mesa/swrast/s_context.c:572
#8  0x00007fd376f43e79 in _swrast_validate_triangle (ctx=0x1fa3ed0, v0=0x7fd37599f3b8, v1=0x7fd37599f730, v2=0x7fd37599f040)
    at ../../../src/mesa/swrast/s_context.c:353
#9  0x00007fd376f446b0 in _swrast_Triangle (ctx=0x1fa3ed0, v0=0x7fd37599f3b8, v1=0x7fd37599f730, v2=0x7fd37599f040)
    at ../../../src/mesa/swrast/s_context.c:630
#10 0x00007fd376f90fe9 in triangle_rgba (ctx=0x1fa3ed0, e0=1, e1=2, e2=0) at ../../../src/mesa/swrast_setup/ss_tritmp.h:177
#11 0x00007fd376f1dfd0 in _tnl_render_poly_verts (ctx=0x1fa3ed0, start=0, count=4, flags=57)
    at ../../../src/mesa/tnl/t_vb_rendertmp.h:353
#12 0x00007fd376f202bf in run_render (ctx=0x1fa3ed0, stage=0x2030fb0) at ../../../src/mesa/tnl/t_vb_render.c:322
#13 0x00007fd376f0e236 in _tnl_run_pipeline (ctx=0x1fa3ed0) at ../../../src/mesa/tnl/t_pipeline.c:164
#14 0x00007fd376f0fb48 in _tnl_draw_prims (ctx=0x1fa3ed0, arrays=0x201dab8, prim=0x201be94, nr_prims=1, ib=0x0, min_index=0, 
    max_index=3) at ../../../src/mesa/tnl/t_draw.c:526
#15 0x00007fd376f0f7f5 in _tnl_vbo_draw_prims (ctx=0x1fa3ed0, prim=0x201be94, nr_prims=1, ib=0x0, index_bounds_valid=1 '\001', 
    min_index=0, max_index=3, tfb_vertcount=0x0) at ../../../src/mesa/tnl/t_draw.c:426
#16 0x00007fd376eedbf8 in vbo_exec_vtx_flush (exec=0x201b738, keepUnmapped=1 '\001') at ../../../src/mesa/vbo/vbo_exec_draw.c:400
#17 0x00007fd376ee65f5 in vbo_exec_FlushVertices_internal (exec=0x201b738, unmap=1 '\001')
    at ../../../src/mesa/vbo/vbo_exec_api.c:555
#18 0x00007fd376ee8474 in vbo_exec_FlushVertices (ctx=0x1fa3ed0, flags=1) at ../../../src/mesa/vbo/vbo_exec_api.c:1164
#19 0x00007fd376dd75db in enable_texture (ctx=0x1fa3ed0, state=0 '\000', texBit=1024) at ../../../src/mesa/main/enable.c:230
#20 0x00007fd376dd9d00 in _mesa_set_enable (ctx=0x1fa3ed0, cap=3553, state=0 '\000') at ../../../src/mesa/main/enable.c:681
#21 0x00007fd376ddb37e in _mesa_Disable (cap=3553) at ../../../src/mesa/main/enable.c:1055
#22 0x0000000000401a65 in Test (intFmt=13, dims=2) at piglit/tests/texturing/texture-packed-formats.c:299
#23 0x0000000000401b66 in piglit_display () at piglit/tests/texturing/texture-packed-formats.c:332
#24 0x00007fd37a907478 in display () at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:60
#25 0x00007fd37a2bc137 in fghRedrawWindow (window=0x1f9fe60) at freeglut_main.c:210
#26 fghcbDisplayWindow (window=0x1f9fe60, enumerator=0x7fffed0635b0) at freeglut_main.c:227
#27 0x00007fd37a2bf889 in fgEnumWindows (enumCallback=0x7fd37a2bc0d0 <fghcbDisplayWindow>, enumerator=0x7fffed0635b0)
    at freeglut_structure.c:394
#28 0x00007fd37a2bc5fa in fghDisplayAll () at freeglut_main.c:249
#29 glutMainLoopEvent () at freeglut_main.c:1450
#30 0x00007fd37a2bcf05 in glutMainLoop () at freeglut_main.c:1498
#31 0x00007fd37a9076ad in run_test (gl_fw=0x7fd37abdabc0, argc=1, argv=0x7fffed063978)
    at piglit/tests/util/piglit-framework-gl/piglit_glut_framework.c:142
#32 0x00007fd37a905796 in piglit_gl_test_run (argc=1, argv=0x7fffed063978, config=0x7fffed063860)
    at piglit/tests/util/piglit-framework-gl.c:127
#33 0x00000000004012be in main (argc=2, argv=0x7fffed063978)
    at piglit/tests/texturing/texture-packed-formats.c:50
(gdb) frame 4
#4  0x00007fd376f6b347 in set_fetch_functions (samp=0x1fbcd84, texImage=0x21a4f50, dims=2)
    at ../../../src/mesa/swrast/s_texfetch.c:1335
1335	   ASSERT(texImage->FetchTexel);
(gdb) print texImage->FetchTexel
$1 = (FetchTexelFunc) 0
(gdb) print *texImage
$2 = {Base = {InternalFormat = 32850, _BaseFormat = 6407, TexFormat = MESA_FORMAT_XBGR16161616_UNORM, Border = 0, Width = 4, 
    Height = 4, Depth = 1, Width2 = 4, Height2 = 4, Depth2 = 1, WidthLog2 = 2, HeightLog2 = 2, DepthLog2 = 0, MaxNumLevels = 3, 
    TexObject = 0x1fbcd50, Level = 0, Face = 0, NumSamples = 0, FixedSampleLocations = 1 '\001'}, _IsPowerOfTwo = 1 '\001', 
  WidthScale = 4, HeightScale = 4, DepthScale = 1, RowStride = 32, ImageSlices = 0x1fa3c30, Buffer = 0x21a6c00 "\377\377", 
  FetchTexel = 0, FetchCompressedTexel = 0}


36e7c01101b5610b432befcf45e54260a78a67c9 is the first bad commit
commit 36e7c01101b5610b432befcf45e54260a78a67c9
Author: Eric Anholt <eric@anholt.net>
Date:   Thu Mar 21 09:45:20 2013 -0700

    mesa: Add ChooseTexFormat support for the new XBGR formats.

:040000 040000 6da6c51c8fa606b4141debcc9177dde6f256f22c 3e1a62170fd28a719644d45ca4aaba24e4841b07 M	src
bisect run success
Comment 1 Brian Paul 2013-06-11 14:28:09 UTC
Fixed by commit 42adf5f0dd807c43a13df62dc1aa6774de07cd59


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.